--- a/README.textile
+++ b/README.textile
@@ -4,7 +4,7 @@ h2. Building
 
 lein uberjar
 
-Usage:
+h2. Usage
 
 Start application in remote debug mode using JVM switches:
 -Xdebug -Xrunjdwp:transport=dt_socket,address=7777,server=y,suspend=n 
