--- a/README.textile
+++ b/README.textile
@@ -10,12 +10,15 @@ Start application in remote debug mode using JVM switches:
 -Xdebug -Xrunjdwp:transport=dt_socket,address=7777,server=y,suspend=n 
 
 Start injector:
-java -cp swank-inject-1.0.0-SNAPSHOT-standalone.jar com.wirde.inject.Main -host localhost -port 7777 -url [URL to the standalone jar] -instances [qualified class name of a (singleton) instance]
+java -cp swank-inject-1.0.0-SNAPSHOT-standalone.jar com.wirde.inject.Main -host localhost -port 7777 -url [URL to the standalone jar] -instances [qualified class names (singleton) of the instances you want available in the REPL]
 
-Run Emacs (with swank-clojure installed)
+Connect to the REPL using telnet (port 4711)
+
+Your instances will be available in a sequence bound to swank-inject.aot/*ctx*
 
 h2. TODO
 
 * Error handling
 * Handle singletons being loaded in multiple classloaders. How to select which leg to follow?
 * Ability to inject "ordinary" remote shell, and not just swank-clojure
+* Alternatively start a Swank REPL
