--- a/README.textile
+++ b/README.textile
@@ -2,9 +2,7 @@ h1. Injecting a Clojure REPL in an unmodified application
 
 "It's a hack, but it (kind of) works..."
 
-A tool which lets you "inject" a Clojure REPL into a running Java application with remote debugging enabled. You are also able to also specify one or more singletons which will be bound to the symbol  @swank-inject.aot/*ctx*@.
-
-If you have a Spring application for example - you can then bind your ApplicationContext. From your ApplicationContext you can reach your beans and invoke arbitrary methods on them. This gives you a very powerful tool to investigate and poke in the guts of your running application.
+A tool which lets you "inject" a Clojure REPL into a running Java application with remote debugging enabled. You are also able to specify one or more classes, one instance of each of those classes (preferably singletons) will be bound to the symbol  @swank-inject.aot/*ctx*@.
 
 Uses Java Debug Interface (JDI) and a URLClassLoader to inject the code (http://download.oracle.com/javase/6/docs/jdk/api/jpda/jdi/index.html)
 
@@ -28,7 +26,7 @@ Your instances will be available in a sequence bound to @swank-inject.aot/*ctx*@
 h2. Limitations
 
 * Probably only works for HotSpot...
-* Expects instances passed to be singletons, if not then the first found instance will be used.
+* Expects classes passed to be singletons, if not then the first found instance will be used.
 * Will currently not work reliably if the class is loaded in multiple classloaders.
 * Using Swank as the injected REPL does not work well for some reason. For now I am using clojure.contrib.server-socket/create-repl-server instead.
 
